--- a/config.yaml
+++ b/config.yaml
@@ -1,31 +1,29 @@
 # Some attributes are required conditionally. These are annotated via comments.
 
 # Required settings
-experiment_name: 'test'
+experiment_name: 'min_with_20'
 mode: 'from_orthogroups'  # 'from_genome', 'from_orthogroups'
-scorer: 'chopchop'  # TODO add deepguide(?) - options: 'chopchop', 'random', 'dummy'
+objective: 'max'
+scorer: 'chopchop'  # TODO add deepguide - options: 'chopchop', 'random', 'dummy' -- dummy assigns a score of 1 to all guides
 solver_engine: 'GLOP'
-cas: 'cas9'  # support for cas9 for now -- cas12a in the works
-pam_regex: r'(?=(GG))'  # PAM for cas9 -- cas12a in the works
+cas: 'cas9'  # options: 'cas9'
+pam_regex: r'(?=(GG))'  # PAM for cas9 is: r'(?=(GG))'
 
-beta: 92  # The final size of the guides set must be <= than this. Think of it as your budget.
+beta: 10  # The final size of the guides set must be <= than this. Think of it as your budget.
 
-# If we have more feasible guides than this, use approximate rounding. Otherwise, search all combinatorial possibilities.
-# The number of exhaustive calculations for 25 feasible guides is 2^25 = 33,554,432 -- For 30 guides it is a billion (1,073,741,824)
-# For 123 guides: 2^123 - 1 possibilities in the worst case
-# Increasing this gives you an exact answer, but may take a VERY (very) long time as it increases exponentially.
+#  Search all combinatorial possibilities unless there are more feasible solutions than this (then use randomized rounding)
 exhaustive_threshold: 0
 
-# Only used if the number of feasible guides is above the exhaustive_threshold below.
-# How many times to run the approximation algorithm?
+# Only used if the number of feasible guides is above the exhaustive_threshold.
+# How many times to run the randomized rounding algorithm?
 num_trials: 10000
 
-traceback: False
 graph: True
 output_csv: True
+traceback: False
 
 # Required for all modes
-input_species_path: 'data/input/input_species.csv'
+input_species_path: 'data/input/input_species_20.csv'
 input_genomes_directory: 'data/input/genomes/'
 output_directory: 'data/output/'
 
