--- a/config.yaml
+++ b/config.yaml
@@ -1,26 +1,12 @@
-# Some attributes are required conditionally. These are annotated via comments.
-
-# Required settings
-experiment_name: 'small'
+# --------------------------------------------------------------------
+# General settings
+# --------------------------------------------------------------------
+experiment_name: 'test_100'
 mode: 'from_genome'  # 'from_genome', 'from_orthogroups'
 objective: 'min'  # default: 'max' uses beta -- 'min' does not use beta
 scorer: 'dummy'  # options: default: 'chopchop', 'dummy' -- dummy assigns a score of 1 to all guides
 solver_engine: 'GLOP'
-
-# Endonuclease settings
-cas: 'cas9'  # default: 'cas9'
-pam: 'NGG'  # default for cas9: 'NGG'
-            # Supports 'NGG' which looks for 'A/C/T/G' + 'GG' 
-            # Any other PAM will be treated as a literal string.
-protospacer_length: 20  # default: 20
-context_toward_five_prime: 5  # default: 5
-context_toward_three_prime: 3  # default: 3
-
 beta: 0  # Used with objective: 'max' -- The final size of the guides set must be <= than this. Think of it as your budget.
-
-input_species_path: 'data/input/small.csv'
-input_genomes_directory: 'data/input/genomes/'
-output_directory: 'data/339_output_genomes_ns/'
 
 # Search all combinatorial possibilities unless there are more
 # feasible solutions than this (then use randomized rounding)
@@ -33,6 +19,30 @@ num_trials: 1
 graph: False
 output_csv: True
 traceback: False
+save_temp_data_to: 'database'  # options: 'ram', 'database'.
+                               # Use database if running out of ram. Database is slower.
+# --------------------------------------------------------------------
+
+
+# --------------------------------------------------------------------
+# Endonuclease settings
+# --------------------------------------------------------------------
+cas: 'cas9'  # default: 'cas9'
+pam: 'NGG'  # default for cas9: 'NGG'
+            # Supports 'NGG' which looks for 'A/C/T/G' + 'GG' 
+            # Any other PAM will be treated as a literal string.
+protospacer_length: 20  # default: 20
+context_toward_five_prime: 5  # default: 5
+context_toward_three_prime: 3  # default: 3
+# --------------------------------------------------------------------
+
+
+# --------------------------------------------------------------------
+# Path Settings
+# --------------------------------------------------------------------
+input_species_path: 'data/input/hundred.csv'
+input_genomes_directory: 'data/input/genomes/'
+output_directory: 'data/339_output_genomes_ns/'
 
 # Required if mode is set to 'from_orthogroups' -- ignored otherwise
 input_cds_directory: 'data/input/cds/orthogroups/'  # Files inside must end with _cds.fna or _cds.faa or _cds.fasta
