--- a/config.yaml
+++ b/config.yaml
@@ -1,26 +1,27 @@
 # --------------------------------------------------------------------
 # General settings
 # --------------------------------------------------------------------
-experiment_name: 'test_100'
+experiment_name: 'test_revert'
 mode: 'from_genome'  # 'from_genome', 'from_orthogroups'
 objective: 'min'  # default: 'max' uses beta -- 'min' does not use beta
-scorer: 'dummy'  # options: default: 'chopchop', 'dummy' -- dummy assigns a score of 1 to all guides
+scorer: 'dummy'  # options: default: 'chopchop', 'dummy'
+                 # dummy assigns a score of 1.0 to all guides
 solver_engine: 'GLOP'
-beta: 0  # Used with objective: 'max' -- The final size of the guides set must be <= than this. Think of it as your budget.
+beta: 0  # Integer value: Used with objective: 'max'
+         # The final size of the guides set must be <= than this. Think of it as your budget.
 
-# Search all combinatorial possibilities unless there are more
+# Integer value: Search all combinatorial possibilities unless there are more
 # feasible solutions than this (then use randomized rounding)
 exhaustive_threshold: 0
 
-# Only used if the number of feasible guides is above the exhaustive_threshold.
+# Integer value: Only used if the number of feasible guides is above the exhaustive_threshold.
 # How many times to run the randomized rounding algorithm?
 num_trials: 1
 
 graph: False
 output_csv: True
-traceback: False
-save_temp_data_to: 'database'  # options: 'ram', 'database'.
-                               # Use database if running out of ram. Database is slower.
+save_temp_data_to: 'ram'  # options: 'ram', 'database'.
+                           # Use database if running out of ram. Database is slower.
 # --------------------------------------------------------------------
 
 
@@ -31,16 +32,16 @@ cas: 'cas9'  # default: 'cas9'
 pam: 'NGG'  # default for cas9: 'NGG'
             # Supports 'NGG' which looks for 'A/C/T/G' + 'GG' 
             # Any other PAM will be treated as a literal string.
-protospacer_length: 20  # default: 20
-context_toward_five_prime: 5  # default: 5
-context_toward_three_prime: 3  # default: 3
+protospacer_length: 20  # Integer, default: 20
+context_toward_five_prime: 5  # Integer, default: 5
+context_toward_three_prime: 3  # Integer, default: 3
 # --------------------------------------------------------------------
 
 
 # --------------------------------------------------------------------
 # Path Settings
 # --------------------------------------------------------------------
-input_species_path: 'data/input/hundred.csv'
+input_species_path: 'data/input/three.csv'
 input_genomes_directory: 'data/input/genomes/'
 output_directory: 'data/339_output_genomes_ns/'
 
