--- a/config.yaml
+++ b/config.yaml
@@ -2,48 +2,49 @@
 # General settings
 # --------------------------------------------------------------------
 experiment_name: 'one_test'
+# ---
 
-mode: 'from_genome'  # 'from_genome', 'from_cds'
+# Choices: 'from_genome', 'from_cds'
+mode: 'from_cds'
+# ---
 
-# Options: default: 'chopchop', 'dummy'
+# Choices: 'chopchop', 'dummy'
 # dummy assigns a score of 1.0 to all guides
-scorer: 'chopchop'
+scorer: 'dummy'
+# ---
 
-solver_engine: 'GLOP'
-
-beta: 0  # Integer value:
-          # The final size of the guides set must be <= than this. Think of it as your budget.
-          # Set to -1 to disable: this causes ALLEGRO to find the smallest gRNA set IGNORING scores
-          #  (treats all guides as the same).
-          # If set to the number of input species, the final size of the set may be up to
-          #  the number of species you have (worst case, one guide per species).
-          # If set to a number HIGHER than the number of species, finds the best #beta guides
-          #  and ensures each species is hit at least once.
-
-# (Affects performance)
+# (Affects performance) Default: False
 # False reduces running time and reduces memory consumption.
 # If False, discards guides with 5 or more repeated 2-mers.
 # For example, this cas9 guide will not be in the output: ACCACCACCACCACCACCAC
 #  since it contains 7 'AC' 2-mers.
 # Also discards guides containing repeating 4- or 5-mers such as AAAAA or TTTT.
-include_repetitive: True
+include_repetitive: False
+# ---
 
-# (Affects performance)
+# (Affects performance) Default: 4
 # A higher number increases running time but reduces memory consumption.
 # Pre-select guides that hit only up to this number of species to act as representatives
 # for these species. Set to 0 to disable and save all guides to memory (highly inefficient).
-mp_threshold: 0
+mp_threshold: 4
+# ---
 
-# (Affects performance)
+# (Affects performance) Default: 10000
 # A higher number slightly increases running time but attempts to find a smaller cover set.
 # Integer value: Only used if the number of feasible guides is above the exhaustive_threshold.
 # How many times to run the randomized rounding algorithm? Any value under 1 disables trials.
 num_trials: 10000
+# ---
 
-# graph: False
-# output_csv: True
-# --------------------------------------------------------------------
-
+# Integer value, default: 0
+beta: 0   # The final size of the guides set must be <= than this. Think of it as your budget.
+          # Set to 0 to disable: this causes ALLEGRO to find the smallest gRNA set IGNORING scores
+          #  (treats all of the guides as equals).
+          # If set to the number of input species, the final size of the set may be up to
+          #  the number of species you have (worst case, one guide per species).
+          # If set to a number HIGHER than the number of species, finds the best #beta guides
+          #  and ensures each species is hit at least once.
+# ---
 
 # --------------------------------------------------------------------
 # Endonuclease settings
@@ -63,7 +64,7 @@ context_toward_three_prime: 0  # Integer, default: 3
 # Path Settings
 # --------------------------------------------------------------------
 output_directory: 'data/output/'
-input_species_path: 'data/input/one.csv'
+input_species_path: 'data/input/ten.csv'   # either a .csv file with the right format, or list of species paths
 input_genomes_directory: 'data/input/genomes/'
 # ---
 
