--- a/src/utils/find_orthogroup_config.yaml
+++ b/src/utils/find_orthogroup_config.yaml
@@ -5,24 +5,12 @@ ortho_path: 'data/input/orthogroups/Orthogroups.tsv'
 prot_id_regex: '\[protein_id=(.*?)\]'
 
 auxotroph_names: [
-  'ILV1', 'ILV3', 'URA3',
-  'HIS2', 'HIS4', 'HIS7',
-  'ARG1', 'ARG3', 'ARG4',
-  'LYS1', 'LYS2', 'LYS4', 'LYS9',
-  'ADE1', 'ADE2', 'ADE6', 'ADE8',
-  'TRP5', 'LEU1', 'THR4', 'ADE13', 'MET2',
+  'LYS2', 'LYS5', 'MET17', 'TRP1', 'URA3', 'FCY1', 'GAP1', 'CAN1'
 ]
 
-auxotroph_tags: [
-  'KLMA_50610'
-]
+auxotroph_tags: []
 
-species: 'kluyveromyces_marxianus'  # species must match with species.fna in cds path and a column name in Orthogroups.tsv
+species: 'saccharomyces_cerevisiae'  # species must match with species.fna in cds path and a column name in Orthogroups.tsv
 gene_names: [
-  'ILV1', 'ILV3', 'URA3',
-  'HIS2', 'HIS4', 'HIS7',
-  'ARG1', 'ARG3', 'ARG4',
-  'LYS1', 'LYS2', 'LYS4', 'LYS9',
-  'ADE1', 'ADE2', 'ADE6', 'ADE8',
-  'TRP5', 'LEU1', 'THR4', 'ADE13', 'MET2',
+  'LYS2', 'LYS5', 'MET17', 'TRP1', 'URA3', 'FCY1', 'GAP1', 'CAN1'
 ]  # Pick an auxotroph gene from the list above to generate the cds for.
